<resources>
    <string name="app_name">Chatting App</string>
    <string name="text_user_name">UserName</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_signup">SignUp</string>
    <string name="text_signin">SignIn</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_register">Register</string>
    <string name="text_chat_fragment">Chat Fragment</string>
    <string name="text_search_fragment">Search Fragment</string>
    <string name="fragment_setting">Fragment Setting</string>
    <string name="text_message_username">Please write username</string>
    <string name="text_message_email">Please write email</string>
    <string name="text_message_password">Please write password</string>
    <string name="text_error_message">Error Message :</string>
    <string name="text_user">Users</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="search_users_here">Search Users Here...</string>
    <string name="welcome">WELCOME</string>
    <string name="send_message">Send Message</string>
    <string name="upload">Uploading</string>
    <string name="wait_for_upload">Please wait..</string>
    <string name="write_something">please write something..</string>
    <string name="updated">Updated</string>
    <string name="image_button">Image Button</string>
    <string name="write_message_here">Write Message Here</string>
    <string name="write_message_first">Please write a message first...</string>
    <string name="pick_image">Pick Image</string>
    <string name="image_upload">Image is uploading, please wait..</string>
    <string name="no_message">No Message</string>
    <string name="image_sent">Image Sent</string>
    <string name="image_view">Image view</string>
</resources>
